# HIKROBOT-MVS-CAMERA-ROS

./: CMakeLists.txt
config/: camera-indoor.yaml  camera-outdoor.yaml  camera.yaml
include/: hikrobot_camera.hpp
src/: hikrobot_camera.cpp
